--- a/public/style.css
+++ b/public/style.css
@@ -113,6 +113,11 @@ div {
     position: relative;
 }
 
+/* Prevents selection */
+.noselect {
+    user-select: none;
+}
+
 /* Text stylings */
 .bold {
     font-weight: bold;
@@ -323,6 +328,7 @@ div {
     width: 20vw;
     height: 3vh;
     background-color: var(--darkGrey);
+    cursor: pointer;
 }
 .characterAbilitySidebarHolder:hover {
     background-color: var(--grey);
@@ -401,6 +407,7 @@ div {
     height: 12vh;
     width: 10vw;
     text-align: center;
+    cursor: pointer;
 }
 .characterInfobox:hover {
     background-color: var(--veryDarkGrey);
@@ -473,15 +480,15 @@ div {
 #characterActionsTab {
     left: 43vw;
 }
-#characterTraitsTab {
+#characterStatusTab {
     left: 62vw;
 }
 #characterClassesTab {
     left: 81vw;
 }
 
-/* The character page, and the inventory list panels */
-#characterInventoryPage {
+/* The page elements all header pages use */
+.characterPage {
     top: 24vh;
     left: 24vw;
     height: 68vh;
@@ -489,6 +496,15 @@ div {
     background-color: transparent;
 }
 
+.characterHeaderButton {
+    font-size: 3vmin;
+    background-color: var(--darkGrey);
+}
+.characterHeaderButton:hover {
+    background-color: var(--grey);
+}
+
+/* The character page, and the inventory list panels */
 #characterInventoryMainPanel {
     top: 8vh;
     height: 60vh;
@@ -588,6 +604,92 @@ div {
     background-color: var(--veryDarkGrey);
 }
 
+/* The panel for the class menu, holding all the visible data on a character's background and origins */
+#characterClassesMainPanel {
+    top: 8vh;
+    height: 60vh;
+    width: 74vw;
+    background-color: var(--darkGrey);
+    overflow-y: scroll;
+}
+
+/* The header buttons for the classes page */
+.selectedCharacterClassesButton {
+    background-color: var(--darkRed);
+}
+.selectedCharacterClassesButton:hover {
+    background-color: var(--veryDarkRed);
+}
+
+#characterClassesClassButton {
+    left: 0;
+    width: 18.5vw;
+}
+#characterClassesRaceButton {
+    left: 18.5vw;
+    width: 18.5vw;
+}
+#characterClassesBackgroundButton {
+    left: 37vw;
+    width: 18.5vw;
+}
+#characterClassesCharacteristicsButton {
+    left: 55.5vw;
+    width: 18.5vw;
+}
+
+/* The subpanels opened and closed by the buttons */
+.characterClassesSubpanel {
+    background: transparent;
+    width: 100%;
+    height: 100%;
+}
+
+/* The holder for the characteristics of the player in the class panel */
+.characterClassPanelCharacteristicBox {
+    top: 2vh;
+    left: 2vw;
+    height: 50vh;
+    width: 15vw;
+    background-color: var(--darkGrey);
+    border: 0.5vmin var(--black) solid;
+    overflow-y: scroll;
+}
+
+.characterClassPanelCharacteristicBoxText {
+    position: relative;
+    height: 6vh;
+    width: 100%;
+    font-size: 2vmin;
+}
+
+.characterClassPanelCharacteristicBoxButton {
+    position: absolute;
+    height: 5vh;
+    top: 53vh;
+    left: 2vw;
+    width: 15vw;
+    font-size: 2vmin;
+    background-color: var(--veryDarkGrey);
+    cursor: pointer;
+}
+.characterClassPanelCharacteristicBoxButton:hover {
+    transform: scale(105%);
+}
+
+.characterClassPanelCharacteristicBoxField {
+    position: relative;
+    height: 6vh;
+    left: 20%;
+    width: 60%;
+    font-size: 3vmin;
+    background-color: var(--veryDarkGrey);
+    text-align: center;
+}
+.characterClassPanelCharacteristicBoxField:hover {
+    background-color: var(--black);
+}
+
 /* The popup menu can be called, and appears during alerts, confirmations, and notifications */
 #popupMenu {
     width: 50vw;
@@ -596,13 +698,24 @@ div {
     left: 25vw;
     background-color: var(--veryDarkGrey);
     z-index: 100;
+    border: 1vmin solid var(--white);
+    overflow: visible;
+}
+
+.popupBackground {
+    width: 100vw;
+    height: 100vh;
+    top: -25vh;
+    left: -25vw;
+    opacity: 60%;
+    background-color: var(--black);
 }
 
 /* The popup menu's title text */
 #popupMenuHeader {
     font-size: 4vmin;
     color: var(--white);
-    width: 50vw;
+    width: 100%;
     height: 12vh;
     background-color: var(--darkGrey);
     text-align: center;
@@ -610,7 +723,7 @@ div {
 }
 
 /* The popup menu's title text */
-#popupMenuDescription {
+.popupMenuDescription {
     font-size: 3vmin;
     color: var(--white);
     width: 40vw;
@@ -624,6 +737,9 @@ div {
     text-align: left;
     z-index: 2;
     overflow-y: scroll;
+}
+.contractedPopupDescription {
+    height: 16vh;
 }
 
 /* The popup menu can either have one confirmation button, or two confirm/deny buttons, outlined below */
@@ -641,8 +757,8 @@ div {
     font-size: 4vmin;
     color: var(--white);
     width: 40vw;
-    height: 8vh;
-    top: 40vh;
+    height: 6vh;
+    top: 41vh;
     left: 5vw;
     text-align: center;
     z-index: 3;
@@ -652,8 +768,8 @@ div {
     font-size: 4vmin;
     color: var(--white);
     width: 18vw;
-    height: 8vh;
-    top: 40vh;
+    height: 6vh;
+    top: 41vh;
     left: 5vw;
     text-align: center;
     z-index: 3;
@@ -663,9 +779,20 @@ div {
     font-size: 4vmin;
     color: var(--white);
     width: 18vw;
-    height: 8vh;
-    top: 40vh;
+    height: 6vh;
+    top: 41vh;
     left: 27vw;
+    text-align: center;
+    z-index: 3;
+}
+
+#popupMenuInput {
+    font-size: 4vmin;
+    color: var(--white);
+    width: 40vw;
+    height: 6vh;
+    top: 30vh;
+    left: 5vw;
     text-align: center;
     z-index: 3;
 }
