--- a/public/style.css
+++ b/public/style.css
@@ -954,13 +954,22 @@ span {
     background-color: var(--darkGrey);
     z-index: 3;
     overflow-y: scroll;
+    opacity: 1;
 }
 .characterReferenceSideMenu:hover {
     background-color: var(--veryDarkGrey);
 }
 
 .characterReferenceSideMenuClosed {
-    left: -25vw;
+    left: -100vw;
+    opacity: 0;
+}
+.characterSideMenuDraggable {
+    cursor: ew-resize;
+}
+.characterSideMenuDragging {
+    opacity: 0.5;
+    transition: 0s;
 }
 
 .characterReferenceSideMenuHeader {
