--- a/public/style.css
+++ b/public/style.css
@@ -942,6 +942,7 @@ span {
     color: var(--white);
     position: relative;
     background-color: var(--grey);
+    user-select: none;
 }
 .characterReferenceHoverText:hover {
     text-decoration: underline;
@@ -984,7 +985,69 @@ span {
 }
 .characterReferenceSideMenuObject {
     width: 100%;
+    height: auto;
     position: relative;
     margin-bottom: 2vmin;
     padding: 1vmin;
+}
+
+/* Popups for when you roll dice or expect a numerical outcome */
+#diceRollPopupHolder {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    flex-wrap: nowrap;
+    position: absolute;
+    left: 2vw;
+    top: 45vh;
+    height: 53vh;
+    width: 20vw;
+    background-color: transparent;
+    z-index: 10;
+}
+
+.diceRollPopup {
+    position: relative;
+    width: 100%;
+    height: 0vh;
+    min-height: 0vh;
+    margin-top: 2vh;
+    background-color: var(--veryDarkBlue);
+    border: solid var(--white) 0.5vmin;
+    transition: 0.5s;
+}
+.diceRollPopupOpened {
+    height: 15vh;
+    min-height: 15vh;
+}
+.diceRollPopup:nth-last-child(1) {
+    opacity: 1;
+}
+.diceRollPopup:nth-last-child(2) {
+    opacity: 0.5;
+}
+.diceRollPopup:nth-last-child(3) {
+    opacity: 0.3;
+}
+.diceRollPopup:nth-last-child(4) {
+    opacity: 0;
+}
+
+.diceRollPopupInfo {
+    position: absolute;
+    left: 0;
+    width: 100%;
+    top: 0;
+    height: 7vh;
+    font-size: 3vmin;
+    text-align: center;
+}
+.diceRollPopupValue {
+    position: absolute;
+    left: 0;
+    width: 100%;
+    top: 7vh;
+    height: 8vh;
+    font-size: 6vh;
+    text-align: center;
 }
