--- a/public/style.css
+++ b/public/style.css
@@ -154,7 +154,7 @@ span {
     top: 0;
     width: 20vw;
     height: 10vh;
-    font-size: 3vmin;
+    font-size: 2vmin;
     color: var(--white);
     background-color: var(--grey);
     z-index: 10002;
@@ -1427,13 +1427,80 @@ span {
     height: 80vh;
     background-color: var(--veryDarkGrey);
     z-index: 5;
+    overflow-y: scroll;
 }
 
-.exportMapButton {
+.saveStateMenuHeader {
     position: relative;
     margin-top: 2vh;
     width: 70vw;
     left: 5vw;
-    height: 5vh;
+    height: 6vh;
+    text-align: center;
+    color: var(--white);
+    font-size: 3vmin;
+}
+
+.exportMapButton {
+    position: relative;
+    width: 70vw;
+    margin-top: 2vh;
+    left: 5vw;
+    height: 8vh;
+    text-align: center;
+    font-size: 3vmin;
     background-color: var(--veryDarkBlue);
+}
+
+#saveStateObjectHoldingMenu {
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 70vw;
+    margin-top: 2vh;
+    left: 5vw;
+    height: max-content;
+    text-align: center;
+    font-size: 3vmin;
+    background-color: var(--veryDarkGrey);
+}
+
+.saveStateObjectHolder {
+    position: relative;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+    width: 8vw;
+    height: 8vw;
+    margin: 1vw;
+    background-color: var(--black);
+    border: solid 1vmin var(--white);
+}
+.saveStateObjectHolder:hover {
+    transform: scale(120%);
+}
+.saveStateObjectHolder:active {
+    transform: scale(120%);
+    border-color: var(--red);
+}
+
+.saveStateObjectHolderCanvas {
+    width: 100%;
+    height: 100%;
+}
+
+.saveStateObjectHolderText {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    left: 0;
+    top: calc(7vw - 4vmin);
+    height: 4vmin;
+    font-size: 2vmin;
+    background-color: var(--black);
+    color: var(--white);
+    opacity: 0.8;
 }
